<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_Upcoming">

    <fragment
        android:id="@+id/navigation_Finishead"
        android:name="com.dicoding.tugasdicoding.ui.dashboard.FinishedFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_Upcoming"
        android:name="com.dicoding.tugasdicoding.ui.notifications.UpcomingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.tugasdicoding.ui.favevent.FavoriteEventFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite_event" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dicoding.tugasdicoding.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_favorite_event" />
</navigation>