<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            android:layout_margin="16dp" />

        <TextView
            android:id="@+id/tvEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageLogo"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvEventTitle"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/tvBeginTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvOwnerName"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/tvQuota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvBeginTime"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="16dp" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvQuota"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnOpenLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/open_link"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_favoritenull_24"
            android:contentDescription="@string/fab_description"
            app:layout_constraintBottom_toBottomOf="@id/imageLogo"
            app:layout_constraintEnd_toEndOf="@id/imageLogo"
            android:elevation="8dp"
            android:translationY="35dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
